fix pagination spacing

--- a/src/styles/pagination.scss
+++ b/src/styles/pagination.scss
@@ -9,13 +9,13 @@
     background: var(--bg-dark);
     display: flex;
     margin: 0 auto;
-    padding: 16px;
     border-radius: 8px;
+    padding: 12px;
     list-style: none;
 
     &__number {
-      margin: 0 8px;
       border-radius: 4px;
+      margin: 0 4px;
 
       a {
         color: var(--white);
